增加devtools热部署

--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile('org.springframework.boot:spring-boot-devtools')
 }
