--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,6 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.springframework.boot:spring-boot-devtools')
+
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
