--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.springframework.boot:spring-boot-devtools')
 
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    compile("mysql:mysql-connector-java:5.1.37")
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
