--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8088
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jiawablog?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.username=jiawablog
+spring.datasource.password=jiawablog
