--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     compile("mysql:mysql-connector-java:5.1.37")
 
+    testCompile("org.mybatis.generator:mybatis-generator-core:1.3.6")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
