--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=jiawablog
 
 // Mybatis配置Mapper
 mybatis.mapper-locations=classpath:/mapper/*.xml
+
+logging.level.com.jiawablog.mapper=debug
