--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=jiawablog
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
 logging.level.com.jiawablog.mapper=debug
+
+# 定位模板的目录
+spring.thymeleaf.prefix=classpath:/static/page/
+# 给返回的页面添加后缀名
+spring.thymeleaf.suffix=.html
