--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.springframework.boot:spring-boot-devtools')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     compile("mysql:mysql-connector-java:5.1.37")
