--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.springframework.boot:spring-boot-devtools')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.0.2')
 
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     compile("mysql:mysql-connector-java:5.1.37")
