--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     compile("mysql:mysql-connector-java:5.1.37")
+    compile("com.github.pagehelper:pagehelper-spring-boot-starter:1.2.5")
 
     testCompile("org.dom4j:dom4j:2.1.0")
     testCompile("org.mybatis.generator:mybatis-generator-core:1.3.6")
