--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8088
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jiawablog?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/jiawablog?characterEncoding=UTF8&autoReconnect=true
 spring.datasource.username=jiawablog
 spring.datasource.password=jiawablog
 
-// Mybatis配置Mapper
-mybatis.mapper-locations=classpath:/mapper/*.xml
+#// Mybatis配置Mapper
+#mybatis.mapper-locations=classpath:/mapper/*.xml
 
 logging.level.com.jiawablog.mapper=debug
 
